--- a/librespeed/opt/librespeed-exporter/librespeed-exporter.service
+++ b/librespeed/opt/librespeed-exporter/librespeed-exporter.service
@@ -5,13 +5,7 @@ After=network-online.target
 [Service]
 User=librespeed-exporter
 Group=librespeed-exporter
-ExecStart=/opt/librespeed-exporter/server.py 51423
-#LimitNOFILE=65536
-#EnvironmentFile=-/etc/default/influxdb
-#KillMode=control-group
-#Restart=on-failure
-#Type=forking
-#PIDFile=/var/lib/influxdb/influxd.pid
+ExecStart=/usr/local/bin/librespeed_exporter --data-retriever-command /usr/local/bin/speedtest-cli --librespeed.server 85
 
 [Install]
 WantedBy=multi-user.target
