--- a/prometheus/opt/prometheus/prometheus.yml
+++ b/prometheus/opt/prometheus/prometheus.yml
@@ -10,6 +10,17 @@ alerting:
         - targets:
           # - alertmanager:9093
 
+remote_read:
+  - url: http://influxdb.local:8086/api/v1/prom/read?db=prometheus
+    remote_timeout: '1m'
+    read_recent: false
+    follow_redirects: true
+remote_write:
+  - url: http://influxdb.local:8086/api/v1/prom/write?db=prometheus
+    remote_timeout: '30s'
+    send_exemplars: false
+    follow_redirects: true
+
 # Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
 # rule_files:
   # - "first_rules.yml"
