--- a/librespeed/opt/librespeed-exporter/librespeed-exporter.service
+++ b/librespeed/opt/librespeed-exporter/librespeed-exporter.service
@@ -5,7 +5,7 @@ After=network-online.target
 [Service]
 User=librespeed-exporter
 Group=librespeed-exporter
-ExecStart=/usr/local/bin/librespeed_exporter --librespeed.command /usr/local/bin/speedtest-cli --librespeed.server 79
+ExecStart=/usr/local/bin/librespeed_exporter --librespeed.command /usr/local/bin/speedtest-cli 79
 
 [Install]
 WantedBy=multi-user.target
